--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Paddy's Cafe</a>
+      <a class="navbar-brand" href="#">CCT Cafe</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -49,8 +49,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h1 class="mt-5">Welcome to Paddy's Cafe</h1>
-        <p class="lead">Select your entrees from the menu below. To calculate the amount of the bill, click the Calculate Bill button. Check the "Highlight Vegetarian Meals" box to highlight vegetarian dishes.</p>
+        <h1 class="mt-5">Welcome to CCT Cafe</h1>
+        <p class="lead">Nothing better than a cup of coffee.</p>
       </div>
       <div id="results" class="col-lg-12 text-center"></div>
     </div>
